Improve button appearance and fix chart overflows

--- a/main.css
+++ b/main.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,900');
 
 :root {
-    --background-color: #212121;
-    --module-primary-color: #FF9800;
-    --module-secondary-color: #58472f;
-    --module-text-color: #f7f6f4;
-    --module-font-family: 'Roboto', sans-serif;
     /*--background-color: #212121;*/
-    /*--module-primary-color: #2299f7;*/
-    /*--module-secondary-color: #484f57;*/
+    /*--module-primary-color: #FF9800;*/
+    /*--module-secondary-color: #58472f;*/
     /*--module-text-color: #f7f6f4;*/
+    --module-font-family: 'Roboto', sans-serif;
+    --background-color: #212121;
+    --module-primary-color: #2299f7;
+    --module-secondary-color: #484f57;
+    --module-text-color: #f7f6f4;
 }
 body {
     background-color: var(--background-color);
@@ -38,42 +38,46 @@ html,body {
     grid-auto-columns: 1fr;
 }
 
-@media only screen and (min-width: 600px) {
-    #grid {
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: 7.5% repeat(7, 1fr);
-        grid-template-areas:
-                ". . header header . ."
-                "w1 video video video video w3"
-                "w2 video video video video w4"
-                ". video video video video w4"
-                "w5 w6 w7 w8 . ."
-                ". . . . . ."
-                "w9 w10 w11 w12 . .";
-        justify-items: stretch;
-        align-items: stretch;
-        /*grid-gap: 3vmin;*/
-        height: calc(100% - 16px);
-        grid-auto-rows: 1fr;
-        grid-auto-columns: 1fr;
-    }
+.label {
+    margin-right: 15px;
+}
 
-    .modal-content {
-        font-family: var(--module-font-family);
-        position: relative;
-        background-color: #fefefe;
-        /*margin: 15% auto; !* 15% from the top and centered *!*/
-        padding: 0;
-        /* border: 1px solid #888; */
-        width: 60%;
-        height: 50vh;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-        display: flex;
-        flex-direction: column;
-        /*animation-name: animatetop;*/
-        /*animation-duration: 0.4s*/
-    }
+.top-buttons {
+    display: flex;
+}
+
+button:first-child {
+    margin-right: 20px;
+}
+
+button:hover {
+    background-color: #4c60ec;
+}
+
+/* From the Materialize CSS library https://github.com/Dogfalo/materialize*/
+button {
+    font-family: var(--module-font-family);
+    text-decoration: none;
+    color: #fff;
+    background-color: #3F51B5;
+    text-align: center;
+    letter-spacing: .5px;
+    -webkit-transition: background-color .2s ease-out;
+    transition: background-color .2s ease-out;
+    cursor: pointer;
+    outline: 0;
+    border: none;
+    border-radius: 2px;
+    display: inline-block;
+
+    height: 32.4px;
+    line-height: 32.4px;
+    font-size: 13px;
+
+    text-transform: uppercase;
+    vertical-align: middle;
+    -webkit-tap-highlight-color: transparent;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 }
 
 .w1 {
@@ -150,8 +154,9 @@ html,body {
     background: var(--module-secondary-color);
     flex: 3;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    margin: 2vh 0.5vw;
+    /* margin: 2vh 0.5vw; */
     justify-content: flex-start;
+    margin: 1vh 0.5vw 1.5vh 0.5vw;
 }
 
 .gauge-text {
@@ -178,7 +183,7 @@ html,body {
 
 .gauge-title {
     user-select: none;
-    flex: 1;
+    flex: 1.5;
     justify-content: center;
     align-items: center;
     color: var(--module-text-color);
@@ -245,7 +250,7 @@ div.smoothie-chart-tooltip {
 .chart {
     flex-grow:  1;
     /* height: 100%; */
-    /* width: 100%; */
+    width: 100%;
 }
 
 /* The Modal (background) */
@@ -296,6 +301,12 @@ div.smoothie-chart-tooltip {
     background-color: #464646;
     color: white;
     /* height: 10%; */
+    height: 120px;
+    display:  flex;
+    align-items: center;
+    justify-content:  space-between;
+    flex-direction:  column;
+    padding: 3vmin;
 }
 
 /* Modal Content */
@@ -357,4 +368,48 @@ div.smoothie-chart-tooltip {
     /* flex: 1; */
     /* height: 100%; */
     /* width:  100%; */
+}
+
+@media only screen and (min-width: 600px) {
+    #grid {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 7.5% repeat(7, 1fr);
+        grid-template-areas:
+                ". . header header . ."
+                "w1 video video video video w3"
+                "w2 video video video video w4"
+                ". video video video video w4"
+                "w5 w6 w7 w8 . ."
+                ". . . . . ."
+                "w9 w10 w11 w12 . .";
+        justify-items: stretch;
+        align-items: stretch;
+        /*grid-gap: 3vmin;*/
+        height: calc(100% - 16px);
+        grid-auto-rows: 1fr;
+        grid-auto-columns: 1fr;
+    }
+    
+    /*.modal-content {*/
+        /*font-family: var(--module-font-family);*/
+        /*position: relative;*/
+        /*background-color: #fefefe;*/
+        /*!*margin: 15% auto; !* 15% from the top and centered *!*!*/
+        /*padding: 0;*/
+        /*!* border: 1px solid #888; *!*/
+        /*width: 60%;*/
+        /*height: 50vh;*/
+        /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);*/
+        /*display: flex;*/
+        /*flex-direction: column;*/
+        /*!*animation-name: animatetop;*!*/
+        /*!*animation-duration: 0.4s*!*/
+    /*}*/
+
+    .modal-footer {
+        flex-direction: row;
+        height: 100px;
+        padding: 1vh 2vw 1vh 2vw;
+    }
 }
